src/main/java/com/example/finalproject/_core/error/exception/Exception401.java
package com.example.finalproject._core.error.exception;

public class Exception401 extends RuntimeException{

    public Exception401(String msg) {
        super(msg);
    }
}
